correction de erreurs dans les repositories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=electronicvoting
 
-spring.datasource.url=jdbc:postgresql://${DATABASE_HOST}:${PORT}/${DATABASE_NAME}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5432/vote
+spring.datasource.username=postgres
+spring.datasource.password=vianney.237
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
