--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=electronicvoting
+server.port=${PORT:8080}
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/vote
 spring.datasource.username=postgres
@@ -16,3 +17,18 @@ springdoc.swagger-ui.path=/swagger-ui.html
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.tagsSorter=alpha
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${EMAIL_USERNAME:fitj202@gmail.com}
+spring.mail.password=${EMAIL_PASSWORD:lmrh mqqq pjej tcbe}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Sécurité
+app.jwt.secret=${JWT_SECRET:your-secret-key-here}
+app.jwt.expiration=86400000
+
+# Génération mots de passe
+app.password.length=12
+app.password.include-symbols=true
