--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,6 @@ app.jwt.expiration=86400000
 # Génération mots de passe
 app.password.length=12
 app.password.include-symbols=true
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
