--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ build/
 ### VS Code ###
 .vscode/
 .env
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
