add the parameters for deploy

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,10 @@
 branch-defaults:
   main:
     environment: civix-env
+environment-defaults:
+  civix-env:
+    branch: null
+    repository: null
 global:
   application_name: civix
   branch: null
