add the parameters for deploy

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+spring.profiles.active=prod
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
