--- a/.github/workflows/service.yml
+++ b/.github/workflows/service.yml
@@ -40,21 +40,21 @@ jobs:
     - name: Build and analyze with SonarCloud
       continue-on-error: true
       env:
-        GITHUB_TOKEN: ${{ variables.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ variables.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ vars.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ vars.SONAR_TOKEN }}
       run: |
         mvn clean verify sonar:sonar \
-          -Dsonar.projectKey=${{ variables.SONAR_PROJECT_KEY }} \
-          -Dsonar.organization=${{ variables.SONAR_ORGANIZATION }} \
+          -Dsonar.projectKey=${{ vars.SONAR_PROJECT_KEY }} \
+          -Dsonar.organization=${{ vars.SONAR_ORGANIZATION }} \
           -Dsonar.host.url=https://sonarcloud.io \
-          -Dsonar.login=${{ variables.SONAR_TOKEN }}
+          -Dsonar.login=${{ vars.SONAR_TOKEN }}
 
     - name: Check SonarCloud Quality Gate (non-blocking)
       continue-on-error: true
       uses: sonarqube-quality-gate-action@master
       timeout-minutes: 5
       env:
-        SONAR_TOKEN: ${{ variables.SONAR_TOKEN }}
+        SONAR_TOKEN: ${{ vars.SONAR_TOKEN }}
 
     - name: Build JAR (force build even if tests fail)
       run: mvn clean package -DskipTests
@@ -82,8 +82,8 @@ jobs:
 
     - name: Deploy to Render (force deploy)
       env:
-        RENDER_API_KEY: ${{ variables.RENDER_API_KEY }}
-        RENDER_SERVICE_ID: ${{ variabless.RENDER_SERVICE_ID }}
+        RENDER_API_KEY: ${{ vars.RENDER_API_KEY }}
+        RENDER_SERVICE_ID: ${{ vars.RENDER_SERVICE_ID }}
       run: |
         echo "Deploying to Render regardless of quality gate result..."
         curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
