--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
+spring.sql.init.data-locations=classpath:init.sql
+spring.sql.init.continue-on-error=true
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
