--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:init.sql
 spring.sql.init.continue-on-error=true
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
