--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:init.sql
 spring.sql.init.continue-on-error=true
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
@@ -40,3 +40,6 @@ app.password.include-symbols=true
 
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
+
+# Configuration upload de fichiers
+file.upload-dir=./uploads
