--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.sql.init.continue-on-error=true
 
 spring.profiles.active=prod
 
+# ${SPRING_PROFILES_ACTIVE:dev}
+
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.swagger-ui.path=/docs
