change the localdatetime in localdate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=electronicvoting
-server.port=${PORT:8080}
+server.port=${PORT:8082}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/vote
+spring.datasource.url=jdbc:postgresql://localhost:5432/votes
 spring.datasource.username=postgres
 spring.datasource.password=vianney.237
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -14,7 +14,7 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:init.sql
 spring.sql.init.continue-on-error=true
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 
 springdoc.api-docs.enabled=true
