--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=electronicvoting
-server.port=${PORT:8082}
+server.port=${PORT:8080}
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/votes
 spring.datasource.username=postgres
@@ -14,7 +14,7 @@ spring.sql.init.mode=always
 spring.sql.init.data-locations=classpath:init.sql
 spring.sql.init.continue-on-error=true
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 
 springdoc.api-docs.enabled=true
